--- a/LearnAkita/ClientApp/package.json
+++ b/LearnAkita/ClientApp/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-browser-dynamic": "8.0.0",
     "@angular/platform-server": "8.0.0",
     "@angular/router": "8.0.0",
+    "@datorama/akita": "^4.10.9",
     "@nguniversal/module-map-ngfactory-loader": "8.0.0-rc.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
     "jquery": "3.4.1",
+    "ngx-take-until-destroy": "^5.4.0",
     "oidc-client": "^1.9.0",
     "popper.js": "^1.14.3",
     "rxjs": "^6.4.0",
